# k4a_projector

./: CMakeLists.txt  README.md  package.xml
config/: config.yaml  target.yaml
data/: left_event_camera_intrinsic_results.yaml  left_regular_camera_intrinsic_results.yaml  right_event_camera_intrinsic_results.yaml  right_regular_camera_intrinsic_results.yaml
examples/: reprojection.bag
include/: CameraCalibration.hpp  CameraIntrinsics.hpp  utility.hpp
launch/: run.launch
src/: main.cpp
