<?xml version="1.0"?>
<package format="2">
  <name>k4a_projector</name>
  <version>1.0.0</version>
  <description>The k4a Projector Package</description>
  <maintainer email="yangjq@shanghaitech.edu.cn">Jiaqi Yang</maintainer>
  <license>BSD-3-Clause-Clear</license>
  <url type="website">https://star-datasets.github.io/vector/</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cv_bridge</depend>
  <depend>eigen</depend>
  <depend>opencv</depend>
  <depend>rosbag</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>yaml-cpp</depend>
</package>
